--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Tesi</string>
     <string name="action_settings">Settings</string>
-    <string name="prova">Prova per Fabio</string>
+    <string name="set_button">SET</string>
+    <string name="current_subject_label">FISICA</string>
+    <string name="timer_value">60</string>
 </resources>
