--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">Tesi</string>
-    <string name="action_settings">Settings</string>
     <string name="set_button">SET</string>
     <string name="current_subject_label">FISICA</string>
     <string name="timer_value">90</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_results">Results</string>
+    <string name="menu_trophies">Trophies</string>
+    <string name="menu_calendar">Calendar</string>
 </resources>
