Countdown funzionante nel thread              funziona bottone              non ancora collegato alla seekbar              stop e riprende Aggiunte immagini Eseguito Merge con versione di Ale (c'è l'intent) Corretti alcuni warning Rivisto il layout con padding un po' diversi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Tesi</string>
     <string name="set_button">SET</string>
     <string name="current_subject_label">FISICA</string>
-    <string name="timer_value">180</string>
+    <string name="timer_value">30</string>
+    <string name="image_desc">Triangular button image</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_results">Results</string>
     <string name="menu_trophies">Trophies</string>
