Conclusione dei risultati (a meno che non si voglia aggiungere altro) e correzione funzionamento menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
 
     <string name="most_frequent_location_label">Luogo più frequente: </string>
     <string name="most_frequent_location_default_value">Non specificato</string>
+    <string name="total_time_label">Tempo totale: </string>
 
 
 </resources>
