--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="set_button">SET</string>
     <string name="current_subject_label">CORSO</string>
     <string name="timer_value">60</string>
+    <string name="pomodoro_value">25</string>
     <string name="seconds_value">00</string>
     <string name="image_desc">Triangular button image</string>
     <string name="menu_settings">Settings</string>
@@ -84,5 +85,7 @@
     <string name="most_frequent_location_default_value">Non specificato</string>
     <string name="total_time_label">Tempo totale: </string>
 
+    <string name="notification_title_label">Timer Concluso! </string>
+    <string name="notification_text_label">Continui? </string>
 
 </resources>
