--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,7 @@
 
     <string name="notification_title_label">Timer Concluso! </string>
     <string name="notification_text_label">Continui? </string>
+    <string name="lazy_title_label">Vuoi mettere il timer a zero?</string>
+    <string name="lazy_text_label">Almeno 5 minuti, dai!</string>
 
 </resources>
