--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,10 @@
     <string name="add_label">Aggiungi</string>
     <string name="abort_label">Annulla</string>
 
+    <string name="no_location_label">Non ci sono ancora luoghi salvati!</string>
+    <string name="close_button_content">Bottone per chiudere mappa</string>
+    <string name="map_button_content">Bottone per aprire mappa</string>
+
     <string name="trophy_title_01">Fuori il primo! E gli altri?</string>
     <string name="trophy_title_02">Splash!</string>
     <string name="trophy_title_03">Pentasplash!</string>
