--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,38 @@
     <string name="lazy_title_label">Vuoi mettere il timer a zero?</string>
     <string name="lazy_text_label">Almeno 5 minuti, dai!</string>
 
+    <!-- Stringhe che erano rimaste "volanti" -->
+    <string name="none">Nessuno</string>
+    <string name="callApiButtonText">Chiama il calendario di Google</string>
+    <string name="retrieveInfoText">Premi il pulsante per ottenere le informazioni</string>
+    <string name="callingApi">Sto avviando il servizio</string>
+    <string name="noConnectionAvailable">Nessun servizio di rete disponibile</string>
+    <string name="accessWarning">Questa applicazione necessita di accedere al tuo account Google (via Contatti)</string>
+    <string name="needsWarning">Questa applicazione necessita di Google Play Services. Ti preghiamo di installare
+        Google Play Services sul tuo dispositivo e riavviare l'app</string>
+    <string name="noResult">Nessun risultato ottenuto</string>
+    <string name="messaggioInutile">Dati ottenuti usando il calendario di Goole:</string>
+    <string name="apiError">Si è verificato un errore:</string>
+    <string name="reqCancelled">Richiesta annullata</string>
+
+    <string name="unlockTrophy">Congratulazioni! hai sbloccato il trofeo </string>
+
+    <string name="noSessionData">Devi selezionare corso e tipo della sessione!</string>
+    <string name="endedTimer">Timer concluso!</string>
+    <string name="noData">Nessun dato</string>
+    <string name="courseDistribution">Distribuzione corsi</string>
+    <string name="typeDistribution">Distribuzione tipi di sessione</string>
+
+    <string name="advice_2_0">Stai studiando con costanza. </string>
+    <string name="advice_2_1">Dovresi studiare con maggiore frequenza. </string>
+    <string name="advice_1_0">Sarebbe meglio studiare per più tempo al giorno. </string>
+    <string name="advice_1_1">Rischi di affaticarti e stressarti se studi per troppo tempo al giorno. </string>
+    <string name="advice_1_2">Stai studiando il corretto numero di ore al giorno. Continua così. </string>
+    <string name="advice_0_0">Negli ultimi dieci giorni hai studiato poche materie diverse al giorno.</string>
+    <string name="advice_0_1">Dovresti concentrarti su meno materie alla volta.</string>
+    <string name="advice_0_2">Negli ultimi dieci giorni hai studiato il corretto numero di materie diverse al giorno.</string>
+
+    <string name="allDataDeleted">Tutti i dati sono stati eliminati</string>
+    <string name="deleted">eliminato</string>
+
 </resources>
