Cambiato bottoni di conferma registrazione e login. Sto provando a fare le richieste http

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,9 @@
     <string name="allDataDeleted">Tutti i dati sono stati eliminati</string>
     <string name="deleted">eliminato</string>
 
+    <!-- stringhe per il login -->
+    <string name="usrnameTaken">Questo username è già stato preso</string>
+    <string name="unknownErr">Errore sconosciuto. Riprovare più tardi</string>
+    <string name="noConnection">Non sei connesso a internet</string>
+
 </resources>
