--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="login_textview_label">es:Student94</string>
     <string name="login_textview_title">Benvenuto! Inserisci un username!</string>
     <string name="password_textview_label">Password</string>
+    <string name="login_access_label">Accedi</string>
+    <string name="login_registration_label">Registrati</string>
 
     <string name="no_location_label">Non ci sono ancora luoghi salvati!</string>
     <string name="close_button_content">Bottone per chiudere mappa</string>
