Aggiunto trofeo 17 con condizione

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="trophy_title_14">Guardone</string>
     <string name="trophy_title_15">Mesiversario</string>
     <string name="trophy_title_16">42</string>
-    <string name="trophy_title_17">Lasciatemi studiare</string>
+    <string name="trophy_title_17">Giramondo</string>
     <string name="trophy_title_18">Caffè?</string>
     <string name="trophy_title_19">Caffeinomane</string>
     <string name="trophy_title_20">Mr Pomodoro</string>
@@ -76,7 +76,7 @@
     <string name="trophy_description_14">Visualizza i risultati delle tue sessioni.</string>
     <string name="trophy_description_15">Utilizza l\'app per un mese.</string>
     <string name="trophy_description_16">Completa 42 sessioni di qualunque tipo.</string>
-    <string name="trophy_description_17">Completa due sessioni di fila senza pausa.</string>
+    <string name="trophy_description_17">Studia in 5 luoghi diversi.</string>
     <string name="trophy_description_18">Completa una sessione normale da almeno un\'ora.</string>
     <string name="trophy_description_19">Completa una sessione normale da almeno due ore.</string>
     <string name="trophy_description_20">Sblocca tutti gli altri trofei..studiando!</string>
