--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,9 +177,13 @@
     <string name="title_intro_1">Studia e lavora meglio!</string>
     <string name="description_intro_1">Fissando tempi di studio e di pausa prima di iniziare potrai essere
     più efficiente e produttivo!</string>
+    <string name="pomodoro_title">Pomodoro Technique</string>
+    <string name="pomodoro_label">Inventata alla fine degli anni \'80, la Pomodoro Technique è una tecnica per la gestione del tempo
+        che si basa sull\'utilizzo di timer da 25 minuti,
+        separati da 5 minuti di pausa. Lo scopo è massimizzare il rendimento nello studio per un periodo prolungato.</string>
     <string name="title_intro_2">Pomodoro o custom?</string>
-    <string name="description_intro_2">Puoi usare la tecnica "Pomodoro", con timer fissi da 25 minuti oppure
-        scegliere te il tempo di lavoro, nella modalità Personalizzata!</string>
+    <string name="description_intro_2"> Non ti piacciono i pomodori? Puoi scegliere te il tempo di lavoro che preferisci,
+        nella modalità Personalizzata!</string>
     <string name="title_intro_3">Visualizza e condividi</string>
     <string name="description_intro_3">Controlla i tuoi risultati con grafici e statistiche,
         confrontali con quelli dei tuoi amici online!</string>
